--- a/vsthemes-org_14554-zero-two-jumping-gif-theme.theme.css
+++ b/vsthemes-org_14554-zero-two-jumping-gif-theme.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"Clean Discord","description":"Clean Discord theme by Ctrl W"}*//{}
 /*---------------------------------------- BACKGROUND ----------------------------------------*/
 body {
-    background: url("https://vsthemes.org/uploads/posts/2021-02/1613416525_zerotwojumping.webp");
+    background: url("https://i.pinimg.com/originals/fc/65/78/fc6578265b412e61e9857fe2deb27fe7.gif");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
