--- a/vsthemes-org_52853-02-rework-different-colors-and-font.theme.css
+++ b/vsthemes-org_52853-02-rework-different-colors-and-font.theme.css
@@ -1,7 +1,7 @@
 @import url("https://discordstyles.github.io/FrostedGlass/dist/FrostedGlass.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
 :root {
---background-image: url('https://i.imgur.com/BwajGMe.jpg');
+--background-image: url('https://i.redd.it/e80jg0xcptp61.jpg');
 --background-image-blur: 0px;
 --background-image-size: cover;
 --background-image-position: center;
