--- a/vsthemes-org_52292-fortnite-chapter-3-theme.theme.css
+++ b/vsthemes-org_52292-fortnite-chapter-3-theme.theme.css
@@ -9,7 +9,7 @@
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 @import url('https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css');
 :root {
---background-image: url('https://i.yapx.ru/SiCAE.jpg');
+--background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fdribbble.com%2FFEARLESS0%2Fcollections%2F2476633-gif-wallpaper&psig=AOvVaw1mxRbLWYAoIzhfH81lSFla&ust=1693955020926000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCOifhKiIkoEDFQAAAAAdAAAAABAE');
   --background-image-blur: 0px;
   --background-image-size: cover;
   --background-image-position: center center;
